[package]
name = "pong"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version="1.12.1", features=["derive"] }
futures = "0.3.24"
rand = "0.8.5"
wgpu = "0.15.0"
winit = "0.27.4"