[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
futures = "0.3.30"
rand = "0.8.5"
wgpu = "0.19.3"
winit = { version = "0.29.13", features = ["rwh_05"] }
